feat(SFS-Turbo): some optimization.

--- a/test-case/EVS/04_evs-share/01_RWO/sc.yaml
+++ b/test-case/EVS/04_evs-share/01_RWO/sc.yaml
@@ -6,4 +6,5 @@ provisioner: evs.csi.huaweicloud.com
 allowVolumeExpansion: true
 parameters:
   type: SSD
+  multiattach: "true"
 reclaimPolicy: Delete
