feat(cmd): important update

--- a/test-case/csi/obs/02_obs-exist/pv.yaml
+++ b/test-case/csi/obs/02_obs-exist/pv.yaml
@@ -10,4 +10,4 @@ spec:
   persistentVolumeReclaimPolicy: Delete
   csi:
     driver: obs.csi.huaweicloud.com
-    volumeHandle: fs-test10086
+    volumeHandle: tf-xxx
