--- a/test-case/csi/evs/01_evs-dynamic/01_default/pvc.yaml
+++ b/test-case/csi/evs/01_evs-dynamic/01_default/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evs-normal-pvc-default
+  name: evs-default-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
-  storageClassName: evs-sc-default
+  storageClassName: evs-default-sc
