--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/1_private/pvc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/1_private/pvc.yaml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-obs1
+  name: obs-parameter-pvc1
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: obs-sc1
+  storageClassName: obs-parameter-sc1
