--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/5_public-read-write-delivered/pvc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/5_public-read-write-delivered/pvc.yaml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-obs5
+  name: obs-parameter-pvc5
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: obs-sc5
+  storageClassName: obs-parameter-sc5
