--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/6_bucket-owner-full-control/pvc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/6_bucket-owner-full-control/pvc.yaml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-obs6
+  name: obs-parameter-pvc6
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: obs-sc6
+  storageClassName: obs-parameter-sc6
