--- a/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/01_default/pvc.yaml
+++ b/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/01_default/pvc.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: sfsturbo-pvc-standard
+  name: sfsturbo-default-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: sfsturbo-sc-standard
+  storageClassName: sfsturbo-default-sc
