--- a/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/02_performance/pvc.yaml
+++ b/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/02_performance/pvc.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: sfsturbo-pvc-performance
+  name: sfsturbo-performance-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: sfsturbo-sc-performance
+  storageClassName: sfsturbo-performance-sc
