--- a/test-case/csi/sfs-turbo/02_sfs-turbo-resize/01_allowVolumeExpansion_is_false/pvc.yaml
+++ b/test-case/csi/sfs-turbo/02_sfs-turbo-resize/01_allowVolumeExpansion_is_false/pvc.yaml
@@ -1,11 +1,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: sfsturbo-pvc-reject-expand
+  name: sfsturbo-deny-resize-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: sfsturbo-sc-reject-expand
+  storageClassName: sfsturbo-deny-resize-sc
