--- a/test-case/csi/evs/01_evs-dynamic/02_parameters/pod.yaml
+++ b/test-case/csi/evs/01_evs-dynamic/02_parameters/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: evs-normal-paras
+  name: evs-parameter-pod
 spec:
   containers:
     - image: nginx
@@ -16,5 +16,5 @@ spec:
   volumes:
     - name: csi-data-evs
       persistentVolumeClaim:
-        claimName: evs-normal-pvc-paras
+        claimName: evs-parameter-pvc
         readOnly: false
