--- a/test-case/csi/evs/01_evs-dynamic/02_parameters/sc.yaml
+++ b/test-case/csi/evs/01_evs-dynamic/02_parameters/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: evs-sc-paras
+  name: evs-parameter-sc
 provisioner: evs.csi.huaweicloud.com
 allowVolumeExpansion: true
 parameters:
