--- a/test-case/csi/evs/02_evs-resize/01_allowVolumeExpansion_is_false/pvc.yaml
+++ b/test-case/csi/evs/02_evs-resize/01_allowVolumeExpansion_is_false/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evs-pvc-no-expend
+  name: evs-deny-expend-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 10Gi
-  storageClassName: evs-sc-no-expend
+  storageClassName: evs-deny-resize-sc
