--- a/test-case/csi/evs/02_evs-resize/01_allowVolumeExpansion_is_false/sc.yaml
+++ b/test-case/csi/evs/02_evs-resize/01_allowVolumeExpansion_is_false/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: evs-sc-no-expend
+  name: evs-deny-resize-sc
 provisioner: evs.csi.huaweicloud.com
 allowVolumeExpansion: false
 parameters:
