--- a/test-case/csi/evs/03_evs-snapshot/pvc.yaml
+++ b/test-case/csi/evs/03_evs-snapshot/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evs-pvc-snapshot
+  name: evs-snapshot-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: evs-sc-snapshot
+  storageClassName: evs-snapshot-sc
