--- a/test-case/csi/evs/03_evs-snapshot/sc.yaml
+++ b/test-case/csi/evs/03_evs-snapshot/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: evs-sc-snapshot
+  name: evs-snapshot-sc
 provisioner: evs.csi.huaweicloud.com
 allowVolumeExpansion: true
 parameters:
