--- a/test-case/csi/evs/04_evs-share/01_RWO/pvc.yaml
+++ b/test-case/csi/evs/04_evs-share/01_RWO/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evs-pvc-rwo
+  name: evs-rwo-pvc
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 10Gi
-  storageClassName: evs-sc-rwo
+  storageClassName: evs-rwo-sc
