--- a/test-case/csi/evs/04_evs-share/02_RWX/pod.yaml
+++ b/test-case/csi/evs/04_evs-share/02_RWX/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: evs-pod-rwx1
+  name: evs-rwx-pod
 spec:
   containers:
     - image: nginx
@@ -16,31 +16,5 @@ spec:
   volumes:
     - name: shared-volume
       persistentVolumeClaim:
-        claimName: evs-pvc-rwx
+        claimName: evs-rwx-pvc
         readOnly: false
-  nodeSelector:
-    node-role.kubernetes.io/node2: node2
-  
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: evs-pod-rwx2
-spec:
-  containers:
-    - image: nginx
-      imagePullPolicy: IfNotPresent
-      name: nginx2
-      ports:
-        - containerPort: 80
-          protocol: TCP
-      volumeMounts:
-        - mountPath: /var/lib/www/html
-          name: shared-volume
-  volumes:
-    - name: shared-volume
-      persistentVolumeClaim:
-        claimName: evs-pvc-rwx
-        readOnly: false
-  nodeSelector:
-    node-role.kubernetes.io/node3: node3
