--- a/test-case/csi/evs/04_evs-share/02_RWX/pvc.yaml
+++ b/test-case/csi/evs/04_evs-share/02_RWX/pvc.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: evs-pvc-rwx
+  name: evs-rwx-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 30Gi
-  storageClassName: evs-sc-rwx
+  storageClassName: evs-rwx-sc
