--- a/test-case/csi/evs/04_evs-share/02_RWX/sc.yaml
+++ b/test-case/csi/evs/04_evs-share/02_RWX/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: evs-sc-rwx
+  name: evs-rwx-sc
 provisioner: evs.csi.huaweicloud.com
 allowVolumeExpansion: true
 parameters:
