--- a/test-case/csi/obs/01_obs-dynamic/01_default/pod.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/01_default/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-obs-default
+  name: obs-default-pod
 spec:
   containers:
     - image: nginx
@@ -14,4 +14,4 @@ spec:
   volumes:
     - name: obs-data
       persistentVolumeClaim:
-        claimName: pvc-obs-default
+        claimName: obs-default-pvc
