--- a/test-case/csi/obs/01_obs-dynamic/01_default/pvc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/01_default/pvc.yaml
@@ -1,14 +1,11 @@
-# when removing SC or PVC, the bucket resources will be cleared and deleted together.
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-obs-default
+  name: obs-default-pvc
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      # when the used storage space in a bucket reaches the upper limit of the bucket storage quota,
-      # it will be unable to continue to write data.
       storage: 500Gi
-  storageClassName: obs-sc-default
+  storageClassName: obs-default-sc
