--- a/test-case/csi/obs/01_obs-dynamic/01_default/sc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/01_default/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: obs-sc-default
+  name: obs-default-sc
 provisioner: obs.csi.huaweicloud.com
 reclaimPolicy: Delete
 parameters:
