--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/2_public-read/pod.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/2_public-read/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-obs2
+  name: obs-parameter-pod2
 spec:
   containers:
     - image: nginx
@@ -14,4 +14,4 @@ spec:
   volumes:
     - name: obs-data
       persistentVolumeClaim:
-        claimName: pvc-obs2
+        claimName: obs-parameter-pvc2
