--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/3_public-read-write/sc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/3_public-read-write/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: obs-sc3
+  name: obs-parameter-sc3
 provisioner: obs.csi.huaweicloud.com
 reclaimPolicy: Delete
 parameters:
