--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/4_public-read-delivered/pvc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/4_public-read-delivered/pvc.yaml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-obs4
+  name: obs-parameter-pvc4
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: obs-sc4
+  storageClassName: obs-parameter-sc4
