--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/5_public-read-write-delivered/sc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/5_public-read-write-delivered/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: obs-sc5
+  name: obs-parameter-sc5
 provisioner: obs.csi.huaweicloud.com
 reclaimPolicy: Delete
 parameters:
