--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/7_mountOptions/pvc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/7_mountOptions/pvc.yaml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-obs7
+  name: obs-parameter-pvc7
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 500Gi
-  storageClassName: obs-sc7
+  storageClassName: obs-parameter-sc7
