--- a/test-case/csi/obs/01_obs-dynamic/02_parameters/7_mountOptions/sc.yaml
+++ b/test-case/csi/obs/01_obs-dynamic/02_parameters/7_mountOptions/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: obs-sc7
+  name: obs-parameter-sc7
 provisioner: obs.csi.huaweicloud.com
 reclaimPolicy: Delete
 mountOptions:
