--- a/test-case/csi/obs/02_obs-exist/pv.yaml
+++ b/test-case/csi/obs/02_obs-exist/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-obs-static2
+  name: obs-static-pv
 spec:
   capacity:
     storage: 5Gi
