--- a/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/01_default/pod.yaml
+++ b/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/01_default/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: sfsturbo-nginx-standard
+  name: sfsturbo-default-pod
 spec:
   containers:
     - image: nginx
@@ -14,4 +14,4 @@ spec:
   volumes:
     - name: sfsturbo-data
       persistentVolumeClaim:
-        claimName: sfsturbo-pvc-standard
+        claimName: sfsturbo-default-pvc
