--- a/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/02_performance/sc.yaml
+++ b/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/02_performance/sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfsturbo-sc-performance
+  name: sfsturbo-performance-sc
 provisioner: sfsturbo.csi.huaweicloud.com
 reclaimPolicy: Delete
 parameters:
