--- a/test-case/csi/sfs-turbo/02_sfs-turbo-resize/01_allowVolumeExpansion_is_false/sc.yaml
+++ b/test-case/csi/sfs-turbo/02_sfs-turbo-resize/01_allowVolumeExpansion_is_false/sc.yaml
@@ -1,10 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfsturbo-sc-reject-expand
+  name: sfsturbo-deny-resize-sc
 provisioner: sfsturbo.csi.huaweicloud.com
 allowVolumeExpansion: false
 reclaimPolicy: Delete
 parameters:
-  # shareType is required, should be 'STANDARD' or 'PERFORMANCE', defaults to 'STANDARD'
   shareType: STANDARD
