--- a/test-case/csi/sfs-turbo/02_sfs-turbo-resize/02_expand_and_scale-in/pod.yaml
+++ b/test-case/csi/sfs-turbo/02_sfs-turbo-resize/02_expand_and_scale-in/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: sfsturbo-nginx-scale-in
+  name: sfsturbo-allow-resize-pod
 spec:
   containers:
     - image: nginx
@@ -14,4 +14,4 @@ spec:
   volumes:
     - name: sfsturbo-data
       persistentVolumeClaim:
-        claimName: sfsturbo-pvc-scale-in
+        claimName: sfsturbo-allow-resize-pvc
