--- a/test-case/csi/sfs-turbo/02_sfs-turbo-resize/02_expand_and_scale-in/sc.yaml
+++ b/test-case/csi/sfs-turbo/02_sfs-turbo-resize/02_expand_and_scale-in/sc.yaml
@@ -1,10 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: sfsturbo-sc-scale-in
+  name: sfsturbo-allow-resize-sc
 provisioner: sfsturbo.csi.huaweicloud.com
 allowVolumeExpansion: true
 reclaimPolicy: Delete
 parameters:
-  # shareType is required, should be 'STANDARD' or 'PERFORMANCE', defaults to 'STANDARD'
   shareType: STANDARD
