--- a/test-case/csi/sfs-turbo/03_sfs-turbo-static/pod.yaml
+++ b/test-case/csi/sfs-turbo/03_sfs-turbo-static/pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: sfs-turbo-static
+  name: sfs-turbo-static-pod
 spec:
   containers:
     - image: nginx
@@ -14,4 +14,4 @@ spec:
   volumes:
     - name: sfsturbo-data
       persistentVolumeClaim:
-        claimName: pvc-sfs-turbo-static
+        claimName: sfs-turbo-static-pvc
