--- a/test-case/csi/sfs-turbo/03_sfs-turbo-static/pv.yaml
+++ b/test-case/csi/sfs-turbo/03_sfs-turbo-static/pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: sfs-turbo-static
+  name: sfs-turbo-static-pv
 spec:
   capacity:
     storage: 500Gi
