--- a/test-case/csi/sfs-turbo/03_sfs-turbo-static/pvc.yaml
+++ b/test-case/csi/sfs-turbo/03_sfs-turbo-static/pvc.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-sfs-turbo-static
+  name: sfs-turbo-static-pvc
 spec:
   accessModes:
     - ReadWriteMany
