--- a/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/02_performance/sc.yaml
+++ b/test-case/csi/sfs-turbo/01_sfs-turbo-dynamic/02_performance/sc.yaml
@@ -6,5 +6,5 @@ provisioner: sfsturbo.csi.huaweicloud.com
 reclaimPolicy: Delete
 parameters:
   # shareType is required, should be 'STANDARD' or 'PERFORMANCE', defaults to 'STANDARD'
+  # availability: eu-west-0a  # 这里可以加入可用区参数，为了跨region这里注释掉
   shareType: PERFORMANCE
-  availability: eu-west-0a
